fixed page-header cutoff issue.

--- a/pycon/static/less/site.less
+++ b/pycon/static/less/site.less
@@ -374,8 +374,11 @@ aside {
   top: -100px;
   background-color: white;
   min-height: 55px;
-  h1 {
-    margin-top: 0;
+  .container {
+    margin-bottom: 50px;
+    h1 {
+      margin-top: 0;
+    }
   }
 }
 
@@ -724,7 +727,7 @@ ul.breadcrumb {
   background: transparent;
   margin-right: 0;
   padding: 0;
-  margin-bottom: 50px;
+  margin-bottom: 0;
   > li {
     text-shadow: none;
   }
